--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -2417,10 +2417,10 @@
     "\n",
     "3. X_test: \n",
     "   - Contiene las características de los datos que se utilizarán para evaluar el rendimiento del modelo una vez entrenado.\n",
-    "   - Al igual que `X_train`, solo contiene las características y no la variable objetivo.\n",
+    "   - Al igual que X_train, solo contiene las características y no la variable objetivo.\n",
     "\n",
     "4. y_test: \n",
-    "   - Contiene la variable objetivo* correspondientes a X_test.\n",
+    "   - Contiene la variable objetivo correspondientes a X_test.\n",
     "   - Se utiliza para evaluar la precisión del modelo comparando las predicciones del modelo (basadas en X_test) con las verdaderas etiquetas en y_test.\n",
     "\n",
     "'''\n"
