--- a/Tarea2.ipynb
+++ b/Tarea2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,15 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_28148\\387409317.py:1: DtypeWarning: Columns (19,47,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  loan_data = pd.read_csv('C:/Users/diego/OneDrive/Escritorio/loan_data_2015.csv')\n"
+      "C:\\Users\\diego\\AppData\\Local\\Temp\\ipykernel_6692\\1906435946.py:1: DtypeWarning: Columns (19,47,55) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  loan_data = pd.read_csv('C:/Users/diego/OneDrive/Escritorio/prestamos_2015.csv')\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
        "4           NaN  "
       ]
      },
-     "execution_count": 283,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1332,7 +1332,7 @@
        "max       32.000000  "
       ]
      },
-     "execution_count": 284,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1582,7 +1582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1698,7 +1698,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1735,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1784,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1828,7 +1828,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1861,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1921,7 +1921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
        "array([1., 7., 6., 0., 8., 9., 3., 4., 2., 5.])"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1941,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1955,7 +1955,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 299,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1966,7 +1966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 300,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2069,7 @@
        "4  Sep-15           Nov-99       Oct-15             Jan-16"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2169,7 +2169,7 @@
        "4                 251856000.0                       243907200.0  "
       ]
      },
-     "execution_count": 302,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2196,7 +2196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2206,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2230,7 +2230,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2311,7 +2311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2323,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 307,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2334,7 +2334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2346,7 +2346,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 309,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2357,7 +2357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2369,7 +2369,7 @@
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 311,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2387,9 +2387,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nExplicación de cada conjunto \\n\\n75% de los datos serán usados para el entrenamiento y 25% para la prueba\\n\\n1. X_train: \\n   - Contiene las características de los datos que se utilizarán para entrenar el modelo.\\n   - No incluye la variable objetivo, solo las características.\\n\\n2. y_train: \\n   - Contiene la variable objetivo correspondientes a X_train.\\n   - Se utiliza para entrenar el modelo junto con X_train, permitiendo que el modelo aprenda la relación entre las características y la variable objetivo.\\n\\n3. X_test: \\n   - Contiene las características de los datos que se utilizarán para evaluar el rendimiento del modelo una vez entrenado.\\n   - Al igual que X_train, solo contiene las características y no la variable objetivo.\\n\\n4. y_test: \\n   - Contiene la variable objetivo correspondientes a X_test.\\n   - Se utiliza para evaluar la precisión del modelo comparando las predicciones del modelo (basadas en X_test) con las verdaderas etiquetas en y_test.\\n\\n'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# vamos a separar los datos en prueba y entrenamiento\n",
     "\n",
